11/15/10 enable/disable shape debug via developer menu items
11/15/10 remove portion of bottom wire that is occluded by battery
11/15/10 add battery terminal offsets to shape model, for more precise wire connections
11/15/10 more precise model of positive battery terminal
11/15/10 remove transparency feature from plates, they are always opaque
11/15/10 remove dielectric transparency for voltmeter
# 0.00.43 (46138) Nov 15, 2010
11/15/10 dev version to demo measurement of voltage and E-field in 2D projection of 3D scene
11/15/10 make E-field detector measure points in the 2D projection of space between the capacitor plates
11/15/10 debug CapacitorShapeFactory methods used by E-field Detector
11/15/10 clean up CapacitorShapeFactory, add methods needed for E-field Detector
11/15/10 add ShapeUtils.add and subtract
11/15/10 remove Point3D from BoxShapeFactory interface
11/15/10 subtract portion of bottom wire occluded by bottom plate
11/15/10 refinements in CapacitorShapeFactory
11/12/10 shape of bottom wire subtracts dielectric and top plate shapes (bottom plate is OK)
11/12/10 implement Capacitor.topPlateIntersects(Shape) and bottomPlateIntersects(Shape), voltmeter probes can now touch the plates
11/12/10 implement shape factory for capacitor, handle object occlusion via shape subtraction
11/12/10 move code for box shapes into BoxShapeFactory, use in BoxNode
11/12/10 remove MVT.modelToModel(Point3D), no longer needed since all Shape creation is in view coordinate frame
11/12/10 change all Shape generation to use global *view* coordinate frame, view needs this for rendering, model doesn't care for Shape intersection
11/12/10 provide MVT to model elements, for 2D shape generation in model coordinates
11/12/10 add method in MVT for "flattening" a 3D model point to a 2D point, still in model coordinates
11/12/10 use consistent labeling of points for defining 3D box faces
# 0.00.42 (46037) Nov 12, 2010
11/12/10 make charges bolder
# 0.00.41 (46029) Nov 12, 2010