@@ -13,14 +13,14 @@ import edu.colorado.phet.capacitorlab.CLConstants;
 import edu.colorado.phet.capacitorlab.control.AddWiresButtonNode;
 import edu.colorado.phet.capacitorlab.control.PlateChargeControlNode;
 import edu.colorado.phet.capacitorlab.control.RemoveWiresButtonNode;
+import edu.colorado.phet.capacitorlab.developer.EFieldShapesDebugNode;
+import edu.colorado.phet.capacitorlab.developer.VoltageShapesDebugNode;
 import edu.colorado.phet.capacitorlab.drag.DielectricOffsetDragHandleNode;
 import edu.colorado.phet.capacitorlab.drag.PlateAreaDragHandleNode;
 import edu.colorado.phet.capacitorlab.drag.PlateSeparationDragHandleNode;
 import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit.BatteryCapacitorCircuitChangeAdapter;
 import edu.colorado.phet.capacitorlab.model.ModelViewTransform;
 import edu.colorado.phet.capacitorlab.module.CLCanvas;
-import edu.colorado.phet.capacitorlab.shapes.EFieldShapesDebugNode;
-import edu.colorado.phet.capacitorlab.shapes.VoltageShapesDebugNode;
 import edu.colorado.phet.capacitorlab.view.BatteryNode;
 import edu.colorado.phet.capacitorlab.view.CapacitorNode;
 import edu.colorado.phet.capacitorlab.view.CurrentIndicatorNode;
